WexGit/Wex_DX/force-app/main/default/objects/CmpgnxUser__c/CmpgnxUser__c.object-meta.xml
<CustomObject>
    <description>Junction object to enable a many-to-many relationship between Campaigns &amp; Users. Campaign is the primary object.</description>
    <label>CmpgnxUser</label>
    <nameField>
        <displayFormat>CmpgnxUser-{0}</displayFormat>
        <label>CmpgnxUser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CmpgnxUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>