WexGit/Wex_DX/force-app/main/default/objects/CmpgnxUser__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CmpgnxUsers</relationshipName>
    <type>Lookup</type>
</CustomField>