WexGit/Wex_DX/force-app/main/default/objects/CmpgnxUser__c/fields/Event_Feedback_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Event_Feedback_Survey_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by Process to indicate that the event feedback survey has been sent</description>
    <label>Event Feedback Survey Sent</label>
    <type>Checkbox</type>
</CustomField>