WexGit/Wex_DX/force-app/main/default/objects/CmpgnxUser__c/fields/Send_Feedback_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Feedback_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by the Campaign Process, which triggers a Process on this object, to send Email Alert to user</description>
    <label>Send Feedback Survey</label>
    <type>Checkbox</type>
</CustomField>